UserNotFoundEx - created custom exception handling - not found by id and username. ControllerAdvice(UserNotFoundAdvice) which handle this UserNotFoundEx.Class.